# Tradgance-API

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  tools.rs
src/binance/: charts.rs  mod.rs  spot.rs  tools.rs  wallet.rs
src/mail/: mailer.rs  mod.rs  monitor.rs  tools.rs
src/models/: direction.rs  mod.rs  trade.rs
src/routes/: hello.rs  mail.rs  mod.rs  trading.rs
src/tester/: mod.rs  tradesignal.rs
