[package]
name = "Tradgance-API"
version = "0.1.0"
edition = "2024"

[dependencies]
binance-sdk = { version = "11.0.0", features = ["wallet", "spot"] }
tokio = { version = "1.44.2", features = ["full"] }
axum = "0.8.3"
dotenv = "0.15.0"
anyhow = "1.0.98"
imap = "3.0.0-alpha.15"
mailparse = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors"] }